syntax = "proto3";

package storage;

service UserRegister {
	rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse) {}
	rpc GetUserNum(UserNumRequest) returns (UserNumResponse) {}
	rpc InsertUserToken(InsertTokenRequest) returns (InsertTokenResponse) {}
	rpc GetUserToken(TokenRequest) returns (TokenResponse) {}
}

message UserInfoRequest {
	string username =1;
}

message UserInfoResponse {
	string accountname = 1;
	string owner_pub_key = 2;
	string active_pub_key = 3;
	string encypted_info = 4;
	string user_type = 5;
	string role_type  = 6;
	string company_name =7;
	string company_address = 8;
}
message UserNumRequest{
}

message UserNumResponse{
    uint32 num = 1;
}
message InsertTokenRequest{
    string username =1;
    string token =2;
}

message InsertTokenResponse{
    string result =1;
}
message TokenRequest{
    string username =1;
}

message TokenResponse{
    string token =1;
}
